# pcore

./: Cargo.toml  LICENSE.md  README.md
src/: error.rs  lib.rs  release_pool.rs  string.rs
src/error/: macos.rs  windows.rs
src/release_pool/: macos.rs  windows.rs
src/string/: macos.rs  windows.rs
winbindings/: Cargo.toml  build.rs
winbindings/src/: lib.rs
