[package]
name = "pcore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="macos")'.dependencies]
objr = {git = "https://github.com/drewcrawford/objr.git"}

[target.'cfg(target_os="windows")'.dependencies]
widestring = "0.4.3"
wchar = "0.11.0"
windows = {version = "~0",features=["Win32_Foundation","Foundation","Win32_System_WinRT"]}